Fixed bug: Selecting new list with no tasks, 'add task' and pagination were overlapping

--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -518,4 +518,6 @@
 .no-tasks-message {
     font-size: 18px;
     font-weight: 500;
+    position: absolute;
+    top: 0;
 }
